--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ clone_folder: /home/appveyor/site
 environment:
   HAXELIB_ROOT: /home/appveyor/haxelib
   HAXE_INSTALLDIR: /home/appveyor/haxe
-  SRC_REPO: https://github.com/KadeDev/Kade-Engine.git
+  SRC_REPO: https://github.com/aflacc/ProjectFNF.git
   GITHUB_ACCESS_TOKEN:
     secure: /iJkmlKYPjeG0o1YoGSpn+NANPJMrCZ6dic5w/12wRiInp+y22kAAXsPkEwBJzHS
 
